# penman

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  penman.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: checks.yml  publish.yml  pythonpublish.yml
docs/: .readthedocs.yaml  API.md  Makefile  advanced.rst  api-demo.ipynb  api.rst  basic-api.rst  basic.rst  command.rst  conf.py  index.rst  library.rst  make.bat  notation.rst  requirements.txt  serialization.rst  setup.rst  structures.rst
docs/api/: penman.codec.rst  penman.constant.rst  penman.epigraph.rst  penman.exceptions.rst  penman.graph.rst  penman.interface.rst  penman.layout.rst  penman.lexer.rst  penman.model.rst  penman.models.amr.rst  penman.models.noop.rst  penman.models.rst  penman.rst  penman.surface.rst  penman.transform.rst  penman.tree.rst
penman/: __about__.py  __init__.py  __main__.py  _format.py  _lexer.py  _parse.py  codec.py  codecs.py  constant.py  epigraph.py  exceptions.py  graph.py  interface.py  layout.py  lexer.py  main.py  model.py  surface.py  transform.py  tree.py  types.py
penman/models/: amr.json  amr.py  noop.py
tests/: conftest.py  test_codec.py  test_constant.py  test_graph.py  test_interface.py  test_layout.py  test_lexer.py  test_model.py  test_penman.py  test_surface.py  test_transform.py  test_tree.py
